# dev-toolbox

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: code_snippet.rs  lib.rs  main.rs  menu.rs  tray.rs
src-tauri/src/clipboard/: watcher.rs
src-tauri/src/http/: config.rs  mod.rs
src-tauri/src/http/handler/: mod.rs  redirect_handler.rs  reverse_proxy_handler.rs
src/assets/stylesheets/: application.scss
src/assets/stylesheets/application/: _layout.scss  _reset.scss  _scrollbar.scss
src/components/: Breadcrumb.vue  HelloWorld.vue  NavMenu.vue
src/components/fragments/: FragmentForm.vue  FragmentTable.vue  index.ts
src/components/shared/: CodeEditor.vue
src/router/: auth.ts  index.ts
src/services/: StockService.ts  index.ts
src/store/: index.ts
src/store/modules/: app.ts  types.ts  user.ts
src/utils/: const.ts
src/utils/directives/: dragScroll.ts
src/utils/hooks/: useCache.ts  useDialog.ts  useDialog.tsx  useLoading.ts  useRoutes.ts
src/utils/http/: index.ts  supportMetaCancelKey.ts
src/views/: index.vue
src/views/auth/: index.vue  login.vue
src/views/clipboardHistories/: CardList.vue  index.vue
src/views/codeSpippets/: index.vue
src/views/home/: JuejinTopCard.vue  SegmentfaultTopCard.vue  index.vue
src/views/httpProxy/: Form.vue  index.vue
src/views/others/: index.vue
types/: components.d.ts
(+13 files in other folders)
