[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all", "system-tray"] }

regex = "1"
once_cell = "1"

# keyboary watch
device_query = "1.1"

# virtual keyboard control
# enigo = "0.0.14"
rdev = "0.5"

# tokio = { version = "1", features = ["full"] }
axum = "0.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["cors"] }

[dependencies.tauri-plugin-sqlite]
git = "https://github.com/lzdyes/tauri-plugin-sqlite"
tag = "v0.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
